--- a/logging_config.json
+++ b/logging_config.json
@@ -11,7 +11,7 @@
       "class": "logging.handlers.RotatingFileHandler",
       "formatter": "default",
       "maxBytes": 1000000,
-      "filename": "logs/login-api.log"
+      "filename": "/var/log/applications/login-api.log"
     },
     "console": {
       "class": "logging.StreamHandler",
@@ -31,4 +31,3 @@
     ]
   }
 }
-
