--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ __pycache__/
 
 # IntelliJ Idea files
 .idea
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.cache
+nosetests.xml
+coverage.xml
