--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 Flask==0.10.1
+Flask-Migrate==1.3.1
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.0
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
-Werkzeug==0.10.1
-sqlalchemy==0.9.8
-Flask-SQLAlchemy==2.0
 pg8000==1.10.1
+SQLAlchemy==0.9.8
+Werkzeug==0.10.1
