--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask-SQLAlchemy==2.0
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+mypy-lang==0.2.0
 pg8000==1.10.1
 SQLAlchemy==0.9.8
 Werkzeug==0.10.1
